# rsigncode

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/rsigncode/: Cargo.toml
crates/rsigncode-cli/: Cargo.toml
crates/rsigncode-cli/src/: main.rs
crates/rsigncode/src/: error.rs  lib.rs  oid.rs
crates/rsigncode/src/asn1/: mod.rs  spc.rs  timestamp.rs
crates/rsigncode/src/crypto/: certs.rs  chain.rs  mod.rs  signing.rs  timestamp.rs  verify.rs
crates/rsigncode/src/format/: pe.rs
crates/rsigncode/tests/: pe_sign_verify.rs
