[package]
name = "rsigncode-cli"
version = "0.1.0"
edition = "2021"
description = "Microsoft Authenticode signing tool (Rust port)"
license = "MIT"

[[bin]]
name = "rsigncode"
path = "src/main.rs"

[dependencies]
rsigncode = { path = "../rsigncode" }
cryptographic-message-syntax = "0.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
pem = "3"
rpassword = "7"
